2007-10-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/installation.doc: Installation manual updated
	to reflect recent changes

2007-10-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binary.cpp, itpp/base/binary.h: Check for allowed 0 or
	1 values in ">>" operator of bin class

	Without this patch it was possible to initialise binary vectors or
	matrices with values other than 0 or 1, when linking to the IT++
	library build without "-DNDEBUG" flag.
	BTW, performed a set of cosmetic changes in bin class operators
	and constructors.

2007-10-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/installation.doc, config/acx_fft.m4: Added
	--with-fft-include=DIR option to the configure command

	This option can be used instead of CPPFLAGS to pass non standard
	paths to include files required by IT++ FFT routines (using ACML,
	MKL or FFTW).

	* config/acx_blas.m4, config/acx_fft.m4, config/acx_lapack.m4:
	Cosmetic changes in --with-PACKAGE strings of the configure
	command

2007-10-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: All test programs needs to be declared in
	ALL_TESTS

	Without this change, some reference files (*.ref) might not have
	been included in the distribution package when --without-lapack or
	--without-fft switch was used.

	* config/acx_fft.m4: Do not set blas_xxx_ok=yes when detecting FFT
	libraries

	This patch fixes FFT library detection macros, so they do not set
	blas_mkl_ok or blas_acml_ok variables. Without this fix, it might
	happened that even if BLAS detection was disabled (e.g. by using
	`--without-blas'), an ACML or MKL BLAS library was indicated as
	found.

	* config/acx_blas.m4, itpp/base/blas.h, itpp/base/vec.h,
	itpp/config_msvc.h: Fixed failing blas_test and vec_test when
	linking with MKL

	There was a problem with using zdotusub_ Fortran wrapper with
	Intel's MKL library, which resulted in segmentation faults in