@@ -84,3 +84,21 @@ B = [[-0.061-0.284i -0.397+0.110i -0.726+0.056i]
  [0.669-0.108i 0.743-0.443i 0.215-0.161i]
  [0.131+0.775i -1.163+1.000i 0.557-0.667i]]
 norm(sqrtm(B) * sqrtm(B) - B) = 0.000
+
+Rank test
+A = [[-1.135 1.584 1.739]
+ [1.108 0.101 1.537]
+ [-1.231 -0.186 0.439]]
+rank(A) = 3
+A2 = [[-1.135 1.584 1.739]
+ [-3.404 4.752 5.218]
+ [-1.231 -0.186 0.439]]
+rank(A2) = 2
+B = [[0.650-0.145i 0.916-0.211i 0.395+0.212i]
+ [-0.031-0.433i -0.053-0.094i -0.919-0.625i]
+ [1.048+0.654i 0.192-0.209i -0.943+0.429i]]
+rank(B) = 3
+B2 = [[0.650-0.145i 0.650-0.145i 0.395+0.212i]
+ [-0.031-0.433i -0.031-0.433i -0.919-0.625i]
+ [1.048+0.654i 1.048+0.654i -0.943+0.429i]]
+rank(B2) = 2
